# fs-more

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  deny.toml  release.toml  rustfmt.toml
.github/workflows/: ci.yml  gh-pages-docs.yml  rust-build-and-test.yml  rust-docs.yml  rust-test.yml
fs-more-test-harness/: Cargo.toml
fs-more-test-harness/src/: double.rs  error.rs  lib.rs  single.rs
src/: directory.rs  error.rs  file.rs  lib.rs  macros.rs
src/directory/: common.rs  copy.rs  mod.rs  move.rs  prepared.rs  scan.rs  size.rs
src/directory/scan/: collected.rs  iter.rs  mod.rs
src/error/: directory.rs  error.rs  file.rs  mod.rs
src/file/: copy.rs  mod.rs  move.rs  progress.rs  remove.rs  size.rs
subcrates/test-harness/: Cargo.toml
subcrates/test-harness-generator/: Cargo.toml
subcrates/test-harness-generator/src/: cli.rs  lib.rs  main.rs  schema.rs
subcrates/test-harness-generator/src/codegen/: directory_in_tree.rs  file_in_tree.rs  final_source_file.rs  mod.rs  symlink_in_tree.rs
subcrates/test-harness-generator/src/codegen/directory_entry/: generation.rs  mod.rs  preparation.rs
subcrates/test-harness-generator/src/codegen/file_entry/: generation.rs  preparation.rs
subcrates/test-harness-generator/src/codegen/final_source_file/: documentation.rs  entry_generation.rs  entry_preparation.rs  mod.rs
subcrates/test-harness-generator/src/codegen/symlink_entry/: mod.rs  preparation.rs
subcrates/test-harness-generator/src/generator/: directory_codegen.rs  file_codegen.rs  mod.rs  name_collision.rs
subcrates/test-harness-generator/src/schema/: directory.rs  file.rs  mod.rs  symlink.rs
subcrates/test-harness-macros/: Cargo.toml
subcrates/test-harness-macros/src/: lib.rs
subcrates/test-harness-schema/: Cargo.toml
subcrates/test-harness-schema/src/: lib.rs  schema.rs
subcrates/test-harness-schema/src/generator/: directory_codegen.rs  file_codegen.rs  mod.rs  name_collision.rs
subcrates/test-harness-tree-generator/: Cargo.toml
subcrates/test-harness-tree-generator/src/: cli.rs  name_collision.rs
subcrates/test-harness-tree-generator/src/codegen/: mod.rs
subcrates/test-harness-tree-generator/src/codegen/broken_symlink_entry/: generation.rs  mod.rs  preparation.rs
subcrates/test-harness-tree-generator/src/codegen/directory_entry/: generation.rs  mod.rs  preparation.rs
subcrates/test-harness-tree-generator/src/codegen/file_entry/: mod.rs  preparation.rs
subcrates/test-harness-tree-generator/src/codegen/final_source_file/: documentation.rs  entry_generation.rs  entry_preparation.rs  mod.rs
subcrates/test-harness-tree-generator/src/codegen/symlink_entry/: generation.rs  preparation.rs
subcrates/test-harness-tree-schema/: Cargo.toml
subcrates/test-harness-tree-schema/src/schema/: broken_symlink.rs  directory.rs  file.rs  mod.rs  symlink.rs
subcrates/test-harness/src/: assertable.rs  case_sensitivity.rs  content_assertion.rs  directory.rs  error.rs  lib.rs  path_comparison.rs  prelude.rs  seeded_data.rs
subcrates/test-harness/src/assertable/: blanket_impls.rs  dir_comparison.rs  file_capture.rs  file_comparison.rs  mod.rs  path_type.rs  trait.rs  traits.rs
subcrates/test-harness/src/assertable/directory/: mod.rs
subcrates/test-harness/src/assertable/file/: comparison.rs  display.rs  mod.rs  state.rs
subcrates/test-harness/src/generated_trees/: deep.rs  deep_symlinked.rs  empty.rs  mod.rs  simple.rs
subcrates/test-harness/src/tree_framework/: initializers.rs  traits.rs
subcrates/test-harness/src/trees/: deep_tree.rs  empty_tree.rs  mod.rs  simple_file.rs  simple_tree.rs
subcrates/test-harness/src/trees/framework/: mod.rs  traits.rs
subcrates/test-harness/src/trees_old/: deep_tree.rs  empty_tree.rs  simple_file.rs  simple_tree.rs
subcrates/test-harness/trees/: _schema.json  broken_symlinks.json  cyclical_symlink.json  deep.json  deep_symlinked.json  empty.json  simple.json  symlinked.json
test-harness/: Cargo.toml
test-harness-derive/: Cargo.toml
test-harness-derive/src/: lib.rs
test-harness-macros/: Cargo.toml
test-harness-macros/src/: lib.rs
test-harness/src/: assertable.rs  content_assertion.rs  error.rs  lib.rs  seeded_data.rs
test-harness/src/trees/: deep_tree.rs  double.rs  empty_tree.rs  mod.rs  simple_file.rs  simple_tree.rs
tests/: directory_copy.rs  directory_list.rs  directory_move.rs  file_copy.rs  file_move.rs  file_remove.rs
tests/integration/directory/: is_empty.rs  list.rs  mod.rs  scan.rs
tests/integration/directory/copy/: normal.rs  with_progress.rs
tests/integration/directory/move/: mod.rs  normal.rs  with_progress.rs
tests/integration/directory/scan/: mod.rs  old.rs
tests/integration/file/: mod.rs  remove.rs
tests/integration/file/copy/: normal.rs  with_progress.rs
tests/integration/file/move/: normal.rs  with_progress.rs
