[package]
name = "fs-more"
version = "0.3.0"
rust-version = "1.63.0"
authors = [
    "Simon Goričar <simon.peter.goricar@gmail.com>"
]
edition = "2021"
description = "Convenient file and directory operations with progress reporting built on top of std::fs."
readme = "README.md"
keywords = [
    "fs",
    "copy",
    "move",
    "progress"
]
categories = [
    "filesystem"
]
documentation = "https://docs.rs/fs-more"
license = "MIT"
repository = "https://github.com/simongoricar/fs-more"
include = [
    "/src",
    "/subcrates",
    "/tests",
    "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "subcrates/test-harness",
    "subcrates/test-harness-macros"
]

[features]
# Enables [`fs-err`](https://docs.rs/fs-err) support, which means more helpful underlying IO error messages.
fs-err = ["dep:fs-err"]

# Derives [`miette::Diagnostic`](https://docs.rs/miette/latest/miette/derive.Diagnostic.html) on all 
# [error types](https://docs.rs/fs-more/latest/fs_more/error/index.html), 
# allowing users to conveniently e.g. [`wrap_err_with`](https://docs.rs/miette/latest/miette/trait.Context.html#tymethod.wrap_err_with).
miette = ["dep:miette"]


[dependencies]
thiserror = "1.0.58"
dunce = "1.0.4"
path-clean = "1.0.1"

# Optional dependencies (see [features] section above).
fs-err = { version = "2.11.0", optional = true }
miette = { version = "7.2.0", optional = true }

[dev-dependencies]
assert_fs = "1.1.1"
assert_matches = "1.5.0"
fs-more-test-harness = { path = "./subcrates/test-harness" }
