[package]
name = "fs-more"
version = "0.4.0"
rust-version = "1.77.0"
authors = [
    "Simon Goričar <simon.peter.goricar@gmail.com>"
]
edition = "2021"
description = "Convenient file and directory operations with progress reporting built on top of std::fs."
readme = "README.md"
keywords = [
    "fs",
    "copy",
    "move",
    "progress"
]
categories = [
    "filesystem"
]
documentation = "https://docs.rs/fs-more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simongoricar/fs-more"
include = [
    "/src",
    "/subcrates",
    "/tests",
    "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "subcrates/test-harness",
    "subcrates/test-harness-generator"
]

[features]
default = ["dunce"]

# Enables [`fs-err`](https://docs.rs/fs-err) support, which means more helpful underlying IO error messages.
fs-err = ["dep:fs-err"]

# Derives [`miette::Diagnostic`](https://docs.rs/miette/latest/miette/derive.Diagnostic.html) on all 
# [error types](https://docs.rs/fs-more/latest/fs_more/error/index.html), 
# allowing users to conveniently e.g. [`wrap_err_with`](https://docs.rs/miette/latest/miette/trait.Context.html#tymethod.wrap_err_with).
miette = ["dep:miette"]

camino = ["dep:camino"]

dunce = ["dep:dunce"]


[dependencies]
thiserror = "1.0.58"
dunce = { version = "1.0.4", optional = true }

# Optional dependencies (see [features] section above).
fs-err = { version = "2.11.0", optional = true }
miette = { version = "7.2.0", optional = true }
camino = { version = "1.1.6", optional = true }


[dev-dependencies]
assert_matches = "1.5.0"
fs-more-test-harness = { path = "./subcrates/test-harness" }
