[package]
name = "fs-more"
version = "0.6.1"
rust-version = "1.77.0"
authors = [
    "Simon Goričar <simon.peter.goricar@gmail.com>"
]
edition = "2021"
description = "Convenient file and directory operations with progress reporting built on top of std::fs."
readme = "README.md"
keywords = [
    "fs",
    "copy",
    "move",
    "progress"
]
categories = [
    "filesystem"
]
documentation = "https://docs.rs/fs-more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simongoricar/fs-more"
include = [
    "/src",
    "/subcrates",
    "/tests",
    "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "subcrates/test-harness",
    "subcrates/test-harness-generator"
]

[features]
default = ["dunce"]

# Enables [`fs-err`](https://docs.rs/fs-err) support, which means more helpful underlying IO error messages,
# though `fs-more` already provides plenty context on its own.
fs-err = ["dep:fs-err"]

dunce = ["dep:dunce"]


[dependencies]
thiserror = "1.0.58"

# Optional dependencies (see [features] section above).
dunce = { version = "1.0.4", optional = true }
fs-err = { version = "2.11.0", optional = true }


[dev-dependencies]
fs-more-test-harness = { path = "./subcrates/test-harness" }
