[package]
name = "fs-more-test-harness-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.29" }
quote = "1.0.33"
proc-macro2 = "1.0.67"
proc-macro-error = "1.0.4"