[package]
name = "fs-more-test-harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_fs = "1.0.13"
once_cell = "1.18.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
thiserror = "1.0.48"
fs-more-test-harness-macros = { path = "../test-harness-macros" }
