[package]
name = "fs-more-test-harness-macros"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.66", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.85"
proc-macro-error = "1.0.4"
