[package]
name = "fs-more-test-harness-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

clap = { version = "4.5.4", features = ["derive"] }

schemars = "0.8.21"

miette = { version = "7.2.0", features = ["fancy"] }

quote = "1.0.35"
syn = "2.0.66"
proc-macro2 = "1.0.85"
prettyplease = "0.2.20"

heck = "0.5.0"
itertools = "0.13.0"
path-slash = "0.2.1"

humansize = "2.1.3"
