[package]
name = "fs-more-test-harness-tree-schema"
version = "0.7.1"
edition = "2021"
publish = false


[features]
serializable_tree_schema = ["dep:serde", "dep:schemars"]

[dependencies]
serde = { version = "1.0.203", features = ["derive"], optional = true }
schemars = { version = "0.8.21", optional = true }
