[package]
name = "fs-more-test-harness"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-more-test-harness-generator = { path = "../test-harness-generator" }

assert_fs = "1.0.13"
once_cell = "1.18.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
thiserror = "1.0.48"
tempfile = "3.10.1"
