[package]
name = "fs-more-test-harness"
version = "0.5.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-more-test-harness-generator = { path = "../test-harness-generator" }

dunce = { version = "1.0.4" }
rand = "0.8.5"
rand_chacha = "0.3.1"
thiserror = "1.0.48"
tempfile = "3.10.1"
humansize = "2.1.3"
assert_matches = "1.5.0"
